--- a/calculator project/calci.html
+++ b/calculator project/calci.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CALCULATOR</title>
-    <link rel="stylesheet" href="./style.css" >
+    <link rel="stylesheet" href="./calci.css" >
 </head>
 <body>
     <h1 style="user-select: none;">CALCULATOR</h1>
@@ -28,8 +28,7 @@
                 <div id="button" class="box">2</div>
                 <div id="button" class="mul">3</div>
                 <div id="operators" class="box">+</div>                
-                <div id="button" class="box">0</div>
-                <div id="button" class="box">.</div>
+                <div id="zero" class="div">0</div>
                 <div id="button" class="delete">DEL</div>
                 <div id="operators" class="ans">=</div>
                 
@@ -38,6 +37,4 @@
     </div>
 </body>
 </html>
-<script src="./script.js"></script>
-
-<!-- calculator -->
+<script src="./clci.js"></script>
